Added index and some images to the starting slide

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,33 +1,35 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Presentations</title>
- </head>
- <body>
-    <table>
-      <tr>
-        <th>Naam</th>
-        <th>Date</th>
-        <th>Link</th>
-      </tr>
-      <tr>
-        <td>Widgets</td>
-        <td>29 November 2012</td>
-        <td><a href="Widgets.html">Widgets.html</a></td>
-      </tr>
-      <tr>
-        <td>Devoxx2012</td>
-        <td>not presented yet</td>
-        <td><a href="Devoxx2012.html">Devoxx2012.html</a></td>
-      </tr>
-      <tr>
-        <td>AkkaSpray</td>
-        <td>not presented yet</td>
-        <td><a href="AkkaSpray.html">AkkaSpray.html</a></td>
-      </tr>
-    </table>
-
- </body>
+<html>
+  <head>
+    <title>Presentations</title>
+    <link rel="stylesheet" media="all" href="theme/css/index.css">
+    <base target="_blank">
+  </head>
+  <body>
+    <article class="vcenter">
+      <h2>Presentations</h2>
+      <table>
+        <tr>
+          <th>Naam</th>
+          <th>Date</th>
+          <th>Link</th>
+        </tr>
+        <tr>
+          <td>Widgets</td>
+          <td>29 November 2012</td>
+          <td><a href="Widgets.html">Widgets.html</a></td>
+        </tr>
+        <tr>
+          <td>Devoxx2012</td>
+          <td>Dec 2012</td>
+          <td><a href="Devoxx2012.html">Devoxx2012.html</a></td>
+        </tr>
+        <tr>
+          <td>AkkaSpray</td>
+          <td>not presented yet</td>
+          <td><a href="AkkaSpray.html">AkkaSpray.html</a></td>
+        </tr>
+      </table>
+    </article>
+  </body>
 </html>
