--- a/src/main/webapp/AkkaSpray.html
+++ b/src/main/webapp/AkkaSpray.html
@@ -1,11 +1,3 @@
-<!--
-Google IO 2012/2013 HTML5 Slide Template
-
-Authors: Eric Bidelman <ebidel@gmail.com>
-         Luke Mahé <lukem@google.com>
-
-URL: https://code.google.com/p/io-2012-slides
--->
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,22 +18,19 @@ URL: https://code.google.com/p/io-2012-slides
 
 <slides class="layout-widescreen">
 
-<!--
-  <slide class="logoslide nobackground">
-    <article class="flexbox vcenter">
-      <span><img src="images/google_developers_logo.png"></span>
-    </article>
-  </slide>
--->
-
-  <slide class="title-slide segue nobackground">
+  <slide class="title-slide segue nobackground fill" style="background-image: url(images/laptop.jpg)">
     <aside class="gdbar"><img src="images/sdl_logo.png"></aside>
-    <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
+        <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup class="auto-fadein">
-      <h1 data-config-title><!-- populated from slide_config.json --></h1>
-      <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
-      <p data-config-presenter><!-- populated from slide_config.json --></p>
+      <h1 style="background-color:white;color:#369;padding-left:10px;padding-right:10px;" data-config-title><!-- populated from slide_config.json --></h1>
+      <h2 style="background-color:white;color:#369;padding-left:10px;padding-right:10px;" data-config-subtitle><!-- populated from slide_config.json --></h2>
+      <p style="background-color:white;color:#369;padding-left:10px;padding-right:10px;" data-config-presenter><!-- populated from slide_config.json --></p>
     </hgroup>
+    <article>
+      <img src="images/akka.jpg" style="float:right;position:relative;right:-100px;top:-80px;clear:right;" />
+      <img src="images/spray.jpg" style="float:right;position:relative;right:-100px;top:-50px;clear:right;" />
+      <img src="images/scala.jpg" style="float:right;position:relative;right:-100px;top:-20px;clear:right;" />
+    </article>
   </slide>
 
   <slide>
@@ -55,9 +44,23 @@ object HelloWorld {
     println("Hello, world!")
   }
 }</pre>
-      <pre class="prettyprint" data-lang="scala">
-def applyValueToFunction(f: Int => String, v: Int) = f(v)</pre>
+      <pre class="prettyprint" data-lang="scala console">
+scala> def applyValueToFunction(f: Int => Int, v: Int) = f(v)
+applyValueToFunction: (f: Int => Int, v: Int)Int
 
+scala> applyValueToFunction(x => x*2, 6)
+res2: Int = 12</pre>
+      <pre class="prettyprint" data-lang="scala">
+//from the scala source code        
+object Option() {      
+  def apply[A](x: A): Option[A] = if (x == null) None else Some(x)
+}
+//
+def getParameter(name:String):Option[String] = {...}
+request.getParameter("foo") match {
+  case Some(p) => println("Param contains value:" + p)
+  case None => println("Param foo does not exists")
+}</pre>
 
     </article>
   </slide>
@@ -68,37 +71,6 @@ def applyValueToFunction(f: Int => String, v: Int) = f(v)</pre>
     </hgroup>
     <article class="flexbox vcenter">
       <img src="images/classhierarchy.png"/>
-    </article>
-  </slide>
-
-  <slide>
-    <hgroup>
-      <h2>A bit of Scala: Pattern matching</h2>
-    </hgroup>
-    <article class="smaller">
-      <pre class="prettyprint" data-lang="scala">
-def matchTest(x: Int): String = x match {
-  case 1 => "one"
-  case 2 => "two"
-  case _ => "many"
-}</pre>
-      <pre class="prettyprint" data-lang="scala">
-try{
-    methodThatThrowsIOException();
-} catch {
-  case e: IOException => println("exception caught: " + e);
-}</pre>
-      <pre class="prettyprint" data-lang="scala">
-class request {
-  def getOptionParameter(name:String):Option[String] = {
-    Option(getParameter(name))
-  }
-}
-
-request.getParameter("foo") match {
-  case Some(p) => println("Param contains value:" + p)
-  case None => println("Param foo does not exists")
-}</pre>
     </article>
   </slide>
 
@@ -164,8 +136,9 @@ request.getParameter("foo") match {
     </hgroup>
     <article class="smaller">
       <pre class="prettyprint" data-lang="scala">
-case class Tick(ticks: Int) 
-case class Reset()
+sealed trait CounterMessages
+case class Tick(ticks: Int) extends CounterMessages
+case class Reset() extends CounterMessages
 
 class Counter extends Actor {
     var counter = 0                                   //state
@@ -277,7 +250,7 @@ class Supervisor extends Actor {
       </tr>
       <tr>
         <td>spray-can</td>
-        <td> low-level, low-overhead, high-performance HTTP server</td>
+        <td>Low-level, low-overhead, high-performance HTTP server</td>
       </tr>
       <tr>
         <td>spray-routing</td>
@@ -413,8 +386,6 @@ path("getsession") {
       </table>
     </article>
   </slide>
-
-
 
   <slide class="backdrop"></slide>
 
