changed last slide a bit

--- a/src/main/webapp/AkkaSpray.html
+++ b/src/main/webapp/AkkaSpray.html
@@ -397,7 +397,7 @@ path("getsession") {
     </article>
   </slide>
 
-  <slide class="thank-you-slide segue dark nobackground">
+  <slide class="thank-you-slide segue nobackground">
     <aside class="gdbar right"><img src="images/sdl_logo.png"></aside>
     <article class="flexbox vleft auto-fadein">
        <h2 style="position:relative;top:-50px;">Thank You!</h2>
@@ -407,16 +407,16 @@ path("getsession") {
           <td>http://presentation-gassies.rhcloud.com</td>
         </tr>
         <tr>
-          <td style="color:#CCC;">Akka</td>
-          <td>http://akka.io or http://www.typesafe.com</td>
+          <td>Akka</td>
+          <td style="color:#CCC;">http://akka.io or http://www.typesafe.com</td>
         </tr>
         <tr>
           <td>Spray</td>
           <td>http://spray.io</td>
         </tr>
         <tr>
-          <td style="color:#CCC;">Demo sourcecode</td>
-          <td>http://github.com/gertjana/Flow</td>
+          <td>Demo sourcecode</td>
+          <td style="color:#CCC;">http://github.com/gertjana/Flow</td>
         </tr>
       </table>
     </article>
