--- a/src/main/webapp/AkkaSpray.html
+++ b/src/main/webapp/AkkaSpray.html
@@ -52,15 +52,19 @@
       <ul>
         <li>A bit of scala</li>
         <ul>
-          <li>Class Hierarchy, Hello World/Generics, Functional programming, Pattern matching</li>
+          <li>Class Hierarchy</li>
+          <li>Object Oriented &amp; Functional programming</li> 
+          <li>Pattern matching</li>
         </ul>
         <li>Akka</li>
         <ul>
-          <li>Actor model, Remote actors, Actor hierarchy, supervision</li>
+          <li>What is Akka?</li>
+          <li>Actor model, remote actors, actor hierarchy, supervision</li>
         </ul>
         <li>Spray</li>
         <ul>
-          <li>spray-can, spray-routing</li>
+          <li>What is Spray?</li>
+          <li>spray-can, spray-routing, spray-testkit</li>
         </ul>
         <li>Demo application</li>
       </ul>   
@@ -78,7 +82,7 @@
 
   <slide>
     <hgroup>
-      <h2>A bit of Scala: </h2>
+      <h2>A bit of Scala: Object Oriented</h2>
     </hgroup>
     <article class="smaller build fade">
       <pre class="prettyprint" data-lang="scala">
@@ -100,7 +104,7 @@ class Stack[T] {
 
   <slide>
     <hgroup>
-      <h2>A bit of Scala: Functional programming</h2>
+      <h2>A bit of Scala: Functional</h2>
     </hgroup>
     <article class="smaller build fade">
       <pre class="prettyprint" data-lang="scala console">
@@ -110,6 +114,13 @@ applyValueToFunction: (f: Int => Int, v: Int)Int
 scala> applyValueToFunction(<b>x => x*2</b>, 6)
 res2: Int = 12</pre>
       <pre class="prettyprint" data-lang="scala">
+def quietlyDispose(action: => Unit, disposal: => Unit) =
+  try     { action }
+  finally {
+    try     { disposal }
+    catch   { case _: IOException => }
+  }
+
 def loadProperties(propFileName:String): Properties = {
   val props = new java.util.Properties
   val stream = getClass.getResourceAsStream(propFilename)
@@ -118,13 +129,6 @@ def loadProperties(propFileName:String): Properties = {
   }
   props
 }
-
-def quietlyDispose(action: => Unit, disposal: => Unit) =
-  try     { action }
-  finally {
-    try     { disposal }
-    catch   { case _: IOException => }
-  }
 </pre>
     </article>    
   </slide>
@@ -433,6 +437,35 @@ path("getsession") {
             }
           }                
         }
+      }
+    }
+  }
+}</pre>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Spray: spray-testkit</h2>
+    </hgroup>
+    <article class="smaller build fade">
+      <pre class="prettyprint" data-lang="scala">
+class FlowServiceSpec extends Specification with Specs2RouteTest with FlowRoutingService {
+
+  "The Flow Service" should {
+
+    "return index.html as text/html" in {
+      Get("/flow/index.html") ~> flowRoute ~> check {
+        status mustEqual OK
+        contentType.charset mustEqual `UTF-8`
+        contentType.mediaType mustEqual `text/html`
+      }
+    }
+
+    "posting an event should result in an OK" in {
+      Post("/flow/event/1337/click") ~> flowRoute ~> check {
+        status mustEqual OK
+        entityAs[String] mustEqual "Ok"
       }
     }
   }
