--- a/src/main/webapp/AkkaSpray.html
+++ b/src/main/webapp/AkkaSpray.html
@@ -30,6 +30,14 @@
       background-color: white;
     }
 
+    hgroup h2 {
+      background-color: #ccc;
+      padding: 15px 15px 15px 80px;
+      position:relative;
+      left:-80px;
+      width:120%;
+    }
+
   </style>
 </head>
 <body style="opacity: 0">
