neanderthal counting is the way to go

--- a/src/main/webapp/AkkaSpray.html
+++ b/src/main/webapp/AkkaSpray.html
@@ -133,7 +133,7 @@ class Stack[T] {
     </hgroup>
     <article class="smaller build fade">
       <pre class="prettyprint" data-lang="scala">
-def matchTest(x: Int): String = x match {
+def neanderthalCounting(x: Int): String = x match {
   case 1 => "one"
   case 2 => "two"
   case _ => "many"
