index page now show thumbnails of the presentations

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,33 +3,17 @@
   <head>
     <title>Presentations</title>
     <link rel="stylesheet" media="all" href="theme/css/index.css">
+    <script type="text/javascript" src="js/jquery-1.7.2.js"></script>
+    <script type="text/javascript" src="js/jquery.freetile.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <base target="_blank">
+    <script>
+
+    </script>
   </head>
   <body>
-    <article class="vcenter">
-      <h2>Presentations</h2>
-      <table>
-        <tr>
-          <th>Naam</th>
-          <th>Date</th>
-          <th>Link</th>
-        </tr>
-        <tr>
-          <td>Widgets</td>
-          <td>29 November 2012</td>
-          <td><a href="Widgets.html">Widgets.html</a></td>
-        </tr>
-        <tr>
-          <td>Devoxx2012</td>
-          <td>Dec 2012</td>
-          <td><a href="Devoxx2012.html">Devoxx2012.html</a></td>
-        </tr>
-        <tr>
-          <td>AkkaSpray</td>
-          <td>not presented yet</td>
-          <td><a href="AkkaSpray.html">AkkaSpray.html</a></td>
-        </tr>
-      </table>
-    </article>
+    <h2>Presentations</h2>
+    <div class="container">
+    </div>
   </body>
 </html>
